--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
               <h2>What Are We Doing</h2>
               <ul>
                   <li>
-                     <img src="./images/img1.png" alt="compute screen" width="360"/>
+                     <img src="./images/img1.png" alt="compute screen" width="360">
                   </li>
                   <li>
-                    <img src="./images/img2.png" alt="cell phone screen" width="360"/>
+                    <img src="./images/img2.png" alt="cell phone screen" width="360">
                   </li>
                   <li>
-                    <img src="./images/img3.png" alt="cell phone held ih the hand" width="360"/>
+                    <img src="./images/img3.png" alt="cell phone held ih the hand" width="360">
                   </li>
               </ul>
             </section>
