--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Header-->
     <header>
         <nav>
-            <a href="./images/Logo.jpg">Webstudio</a>
+            <a href="./index.html">WebStudio</a>
           <ul>
               <li><a href="">Studio</a> </li>
               <li><a href="">Portfolio</a> </li>
@@ -22,10 +22,10 @@
           <address>
               <ul>
                 <li>
-                    <a href="info@devstudio.com ">info@devstudio.com </a>
+                    <a href="mailto:info@devstudio.com ">info@devstudio.com </a>
                  </li>
               <li>
-                <a href="tel:+11(000)111111">+11 (000) 111-11-11 </a>
+                <a href="tel:+11000111111">+11 (000) 111-11-11 </a>
              </li>
               </ul>
           </address>
@@ -37,7 +37,7 @@
           <body>
             <!--HeroSection1-->
              <section>
-                <h1>Effective Solutions<br/>for Your Business</h1>
+                <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service </button>
              </section>
              
@@ -129,7 +129,9 @@
           </body>
       <!-- Footer-->
           <footer>
-              <a href="./images/Logo.jpg">Webstudio </a>
+              <a 
+              href="./index.html">WebStudio 
+            </a>
               <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.      </p>
           </footer>
  </body>
