--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <!--Contacts-->
           <address>
               <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
+                 <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                  </li>
-              <li>
-                <a href="tel:+11000111111">+11(000)111-11-11</a>
-             </li>
+                 <li>
+                  <a href="tel:+11000111111">+11 (000) 111-11-11</a>
+                 </li>
               </ul>
           </address>
         
@@ -75,7 +75,7 @@
 
             <!-- Section3-->
              <section>
-              <h2>What Are We Doing</h2>
+              <h2>What are we doing</h2>
               <ul>
                   <li>
                      <img src="./images/img1.jpg" alt="compute screen" width="360">
