--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </li>
           
                  <li>
-              <img src="images/TeamCart2.jpg"
+              <img src="./images/TeamCart2.jpg"
               alt="picture of a men in his thirties"
               width="264">
                       <h3>Tom Ford</h3>
